# server/docs/swagger.yaml
@@ -737,6 +737,175 @@ paths:
           description: Failed to fetch saved vocabs
         '500':
           description: Internal server error
+  /auth/register:
+    post:
+      summary: Register a new user
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        '201':
+          description: User registered successfully
+        '400':
+          description: Validation errors or internal server error
+
+  /auth/login:
+    post:
+      summary: Login a user
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        '200':
+          description: Login successful
+        '400':
+          description: Validation errors or incorrect password
+
+  /auth/google-login:
+    post:
+      summary: Login a user using Google
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                name:
+                  type: string
+                profileImg:
+                  type: string
+      responses:
+        '200':
+          description: Login successful
+        '400':
+          description: Internal server error
+
+  /auth/forgot-password:
+    post:
+      summary: Initiate forgot password process
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+      responses:
+        '200':
+          description: Reset password email sent successfully
+        '400':
+          description: Validation errors or user not found
+
+  /auth/reset-password:
+    post:
+      summary: Reset user password
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                newPassword:
+                  type: string
+                confirmNewPassword:
+                  type: string
+                token:
+                  type: string
+      responses:
+        '200':
+          description: Password reset successfully
+        '400':
+          description: Validation errors or invalid token
+
+  /auth/verify-email:
+    post:
+      summary: Verify user email
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                token:
+                  type: string
+      responses:
+        '200':
+          description: Email verified successfully
+        '400':
+          description: Validation errors or invalid token
+
+  /auth/refresh-token:
+    post:
+      summary: Refresh access token
+      tags:
+        - Auth
+      responses:
+        '200':
+          description: Access token refreshed successfully
+        '401':
+          description: Refresh token is required
+        '403':
+          description: Invalid refresh token
+
+  /auth/send-verification-email:
+    post:
+      summary: Send verification email
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                _id:
+                  type: string
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Verification email sent successfully
+        '400':
+          description: Email already verified or user not found
+
 components:
   schemas:
     CreateTestDTO:
